[Autofill] Override html prediction for autocomplete=tel if server thinks no country-code is expected.

Right now if a field has autocomplete=tel set, autofill ignore server
predictions and mark the field PHONE_HOME_WHOLE_NUMBER. This is causing
phone number filling issues on some web sites where they actually do not
expect a country code. Server predict this case better, so we will 
override html prediction.

Bug: 781937
Change-Id: Iac9f48cad5608ec600c5880e787b90557d3ed461
Reviewed-on: https://chromium-review.googlesource.com/755853
Commit-Queue: Hui Wu <wuandy@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514854}
Former-commit-id: c048c7babec6b41112c1ea694e19b0c945b00662